--- a/exchangerates.html
+++ b/exchangerates.html
@@ -2,17 +2,16 @@
 <head>
 </head>
 <body>
-	<script>
-        var fm = "USD";
-        var to = "EUR,USD,UAH";
-        var tz = "timezone";
-        var sz = "1x201";
-        var lg = "en";
-        var st = "primary";
-        var cd = 0;
-        var am = 1;
+    <script>
+    var fm = "USD";
+    var to = "EUR,UAH";
+    var tz = "timezone";
+    var sz = "1x164";
+    var lg = "en";
+    var st = "primary";
+    var cd = 0;
+    var am = 1
     </script>
-    <script src="//currencyrate.today/exchangerates"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div>
-
+    <script src="//currencyrate.today/exchangerates"></script>
 </body>
 </html>
